Update file paths in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
@@ -79,7 +79,7 @@
 
           <div class="hero__cta reveal">
             <a class="btn btn--accent" href="#contact">Hire Me</a>
-            <a class="btn btn--ghost" href="assets/Akash_M_Resume.pdf" download>Download CV</a>
+            <a class="btn btn--ghost" href="Akash_M_Resume.pdf" download>Download CV</a>
           </div>
 
           <div class="stats reveal" aria-label="Quick stats">
@@ -101,7 +101,7 @@
         <div class="hero__right reveal">
           <div class="portrait">
             <!-- Replace the image with: assets/profile.jpg (recommended: 800x1000) -->
-            <img src="assets/profile-placeholder.svg" alt="Portrait of Akash M" />
+            <img src="profile-placeholder.svg" alt="Portrait of Akash M" />
             <span class="portrait__ring" aria-hidden="true"></span>
             <span class="portrait__ring portrait__ring--inner" aria-hidden="true"></span>
           </div>
@@ -181,7 +181,7 @@
             </div>
 
             <div class="hero__cta" style="margin-top:14px">
-              <a class="btn btn--ghost" href="assets/Akash_M_Resume.pdf" download>Download CV</a>
+              <a class="btn btn--ghost" href="Akash_M_Resume.pdf" download>Download CV</a>
               <a class="btn btn--accent" href="#projects">View Projects</a>
             </div>
           </div>
@@ -388,7 +388,7 @@
 
             <div class="hero__cta" style="margin-top:14px">
               <a class="btn btn--accent" href="mailto:makash122003@gmail.com?subject=Portfolio%20Inquiry%20—%20Akash%20M">Email Me</a>
-              <a class="btn btn--ghost" href="assets/Akash_M_Resume.pdf" download>Download CV</a>
+              <a class="btn btn--ghost" href="Akash_M_Resume.pdf" download>Download CV</a>
             </div>
           </div>
 
@@ -428,6 +428,6 @@
     </div>
   </main>
 
-  <script src="js/main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
